Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTI1553VB.BAS

Public Declare Function BTI1553_ModeIsNotMon Lib "BTI1553.DLL" Alias "_BTI1553_ModeIsNotMon@4" (ByVal chanflag As Integer) As Long
Public Declare Function BTI1553_ModeIsNotPlay Lib "BTI1553.DLL" Alias "_BTI1553_ModeIsNotPlay@4" (ByVal chanflag As Integer) As Long
Public Declare Function BTI1553_ModeIsNotRT Lib "BTI1553.DLL" Alias "_BTI1553_ModeIsNotRT@4" (ByVal chanflag As Integer) As Long
Public Declare Function BTI1553_ModeIsNotSerial Lib "BTI1553.DLL" Alias "_BTI1553_ModeIsNotSerial@4" (ByVal chanflag As Integer) As Long
Public Declare Function BTI1553_ModeIsPlay Lib "BTI1553.DLL" Alias "_BTI1553_ModeIsPlay@4" (ByVal chanflag As Integer) As Long
Public Declare Function BTI1553_ModeIsRT Lib "BTI1553.DLL" Alias "_BTI1553_ModeIsRT@4" (ByVal chanflag As Integer) As Long
Public Declare Function BTI1553_ModeIsSerial Lib "BTI1553.DLL" Alias "_BTI1553_ModeIsSerial@4" (ByVal chanflag As Integer) As Long
Public Declare Function BTI1553_MonConfigEx Lib "BTI1553.DLL" Alias "_BTI1553_MonConfigEx@20" (ByVal configval As Long, ByVal moncount As Long, ByVal cardnum As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_MonFilterSAEx Lib "BTI1553.DLL" Alias "_BTI1553_MonFilterSAEx@28" (ByVal taval As Long, ByVal rcvsamask As Long, ByVal xmtsamask As Long, ByVal rcvmcmask As Long, ByVal xmtmcmask As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_MsgCheck Lib "BTI1553.DLL" Alias "_BTI1553_MsgCheck@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Integer
Public Declare Function BTI1553_MsgCommRd Lib "BTI1553.DLL" Alias "_BTI1553_MsgCommRd@12" (ByRef buf As MSGFIELDS1553, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_MsgCommWr Lib "BTI1553.DLL" Alias "_BTI1553_MsgCommWr@12" (ByRef buf As MSGFIELDS1553, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_MsgConfig Lib "BTI1553.DLL" Alias "_BTI1553_MsgConfig@8" (ByVal configval As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_MsgConfigEx Lib "BTI1553.DLL" Alias "_BTI1553_MsgConfigEx@12" (ByVal configval As Long, ByVal cwd As Integer, ByVal handleval As Long) As Long
Public Declare Function BTI1553_MsgCWD1Rd Lib "BTI1553.DLL" Alias "_BTI1553_MsgCWD1Rd@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Integer
Public Declare Sub BTI1553_MsgCWD1Wr Lib "BTI1553.DLL" Alias "_BTI1553_MsgCWD1Wr@12" (ByVal cwd1 As Integer, ByVal msgaddr As Long, ByVal handleval As Long)
Public Declare Function BTI1553_MsgCWD2Rd Lib "BTI1553.DLL" Alias "_BTI1553_MsgCWD2Rd@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Integer
Public Declare Sub BTI1553_MsgCWD2Wr Lib "BTI1553.DLL" Alias "_BTI1553_MsgCWD2Wr@12" (ByVal cwd2 As Integer, ByVal msgaddr As Long, ByVal handleval As Long)
Public Declare Function BTI1553_MsgErrorRd Lib "BTI1553.DLL" Alias "_BTI1553_MsgErrorRd@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Integer
Public Declare Sub BTI1553_MsgErrorWr Lib "BTI1553.DLL" Alias "_BTI1553_MsgErrorWr@12" (ByVal value As Integer, ByVal msgaddr As Long, ByVal handleval As Long)
Public Declare Function BTI1553_MsgFlagRd Lib "BTI1553.DLL" Alias "_BTI1553_MsgFlagRd@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Integer
Public Declare Sub BTI1553_MsgFlagWr Lib "BTI1553.DLL" Alias "_BTI1553_MsgFlagWr@12" (ByVal msgflag As Integer, ByVal msgaddr As Long, ByVal handleval As Long)
Public Declare Function BTI1553_MsgIsAccessed Lib "BTI1553.DLL" Alias "_BTI1553_MsgIsAccessed@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_MsgOptRd Lib "BTI1553.DLL" Alias "_BTI1553_MsgOptRd@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Integer
Public Declare Sub BTI1553_MsgOptWr Lib "BTI1553.DLL" Alias "_BTI1553_MsgOptWr@12" (ByVal msgopt As Integer, ByVal msgaddr As Long, ByVal handleval As Long)
Public Declare Function BTI1553_MsgReset Lib "BTI1553.DLL" Alias "_BTI1553_MsgReset@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_MsgResetEx Lib "BTI1553.DLL" Alias "_BTI1553_MsgResetEx@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_MsgSWD1Rd Lib "BTI1553.DLL" Alias "_BTI1553_MsgSWD1Rd@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Integer
Public Declare Function BTI1553_MsgSWD2Rd Lib "BTI1553.DLL" Alias "_BTI1553_MsgSWD2Rd@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Integer
Public Declare Function BTI1553_PlayClear Lib "BTI1553.DLL" Alias "_BTI1553_PlayClear@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_PlayConfigEx Lib "BTI1553.DLL" Alias "_BTI1553_PlayConfigEx@20" (ByVal configval As Long, ByVal playcount As Long, ByVal tamask As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_PlayCounterWr Lib "BTI1553.DLL" Alias "_BTI1553_PlayCounterWr@12" (ByVal totalcount As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_PlayStatusEx Lib "BTI1553.DLL" Alias "_BTI1553_PlayStatusEx@12" (ByRef totalcount As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_PlayWrEx Lib "BTI1553.DLL" Alias "_BTI1553_PlayWrEx@16" (ByRef buf As Integer, ByVal bufcount As Integer, ByVal channum As Long, ByVal handleval As Long) As Integer
Public Declare Function BTI1553_RTConfigEx Lib "BTI1553.DLL" Alias "_BTI1553_RTConfigEx@16" (ByVal configval As Long, ByVal taval As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_RTConfigExx Lib "BTI1553.DLL" Alias "_BTI1553_RTConfigExx@16" (ByVal configval As Long, ByVal taval As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_RTCreateListEx Lib "BTI1553.DLL" Alias "_BTI1553_RTCreateListEx@40" (ByVal listconfigval As Long, ByVal skipval As Long, ByVal count As Long, ByVal msgconfigval As Long, ByVal mcflag As Long, ByVal taval As Long, ByVal trflag As Long, ByVal saval As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_RTCreateListExx Lib "BTI1553.DLL" Alias "_BTI1553_RTCreateListExx@40" (ByVal listconfigval As Long, ByVal skipval As Long, ByVal count As Long, ByVal msgconfigval As Long, ByVal mcflag As Long, ByVal taval As Long, ByVal trflag As Long, ByVal saval As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_RTResponseTimeRd Lib "BTI1553.DLL" Alias "_BTI1553_RTResponseTimeRd@16" (ByRef timeval As Integer, ByVal taval As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_RTResponseTimeWr Lib "BTI1553.DLL" Alias "_BTI1553_RTResponseTimeWr@16" (ByVal timeval As Integer, ByVal taval As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_RTStatus Lib "BTI1553.DLL" Alias "_BTI1553_RTStatus@12" (ByVal taval As Long, ByVal channum As Long, ByVal handleval As Long) As Integer
Public Declare Function BTI1553_SABlkWr Lib "BTI1553.DLL" Alias "_BTI1553_SABlkWr@16" (ByVal taval As Long, ByVal saval As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_SABlkWrEx Lib "BTI1553.DLL" Alias "_BTI1553_SABlkWrEx@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_SchedBuild Lib "BTI1553.DLL" Alias "_BTI1553_SchedBuild@20" (ByVal nummsgs As Long, ByRef msgaddr As Long, ByRef freq As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_SchedBuildEx Lib "BTI1553.DLL" Alias "_BTI1553_SchedBuildEx@32" (ByVal nummsgs As Long, ByRef msgaddr As Long, ByRef freq As Long, ByRef period As Long, ByRef buf As Long, ByVal bufsize As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_SchedBuildExx Lib "BTI1553.DLL" Alias "_BTI1553_SchedBuildExx@32" (ByVal frametime As Long, ByVal nummsgs As Long, ByRef msgaddr As Long, ByRef period As Long, ByRef buf As Long, ByVal bufsize As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_SchedCalc Lib "BTI1553.DLL" Alias "_BTI1553_SchedCalc@12" (ByRef msgaddr As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Sub BTI1553_SchedDisplay Lib "BTI1553.DLL" Alias "_BTI1553_SchedDisplay@8" (ByVal nummsgs As Long, ByRef count As Long)
Public Declare Sub BTI1553_SchedHook Lib "BTI1553.DLL" Alias "_BTI1553_SchedHook@8" (ByVal index As Long, ByVal ptr As Long)
Public Declare Function BTI1553_SchedInsEnd Lib "BTI1553.DLL" Alias "_BTI1553_SchedInsEnd@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_SchedInsMsg Lib "BTI1553.DLL" Alias "_BTI1553_SchedInsMsg@16" (ByVal index As Long, ByRef msgaddr As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_SchedInsStart Lib "BTI1553.DLL" Alias "_BTI1553_SchedInsStart@16" (ByVal frametime As Long, ByVal count As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_SchedMaxval Lib "BTI1553.DLL" Alias "_BTI1553_SchedMaxval@8" (ByRef arrayval As Long, ByVal arrayvalcount As Long) As Long
Public Declare Function BTI1553_SchedMinval Lib "BTI1553.DLL" Alias "_BTI1553_SchedMinval@8" (ByRef arrayval As Long, ByVal arrayvalcount As Long) As Long
Public Declare Function BTI1553_SerialClear Lib "BTI1553.DLL" Alias "_BTI1553_SerialClear@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_SerialConfig Lib "BTI1553.DLL" Alias "_BTI1553_SerialConfig@16" (ByVal configval As Long, ByVal count As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_SerialConfigEx Lib "BTI1553.DLL" Alias "_BTI1553_SerialConfigEx@16" (ByVal configval As Long, ByVal count As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_SerialStatus Lib "BTI1553.DLL" Alias "_BTI1553_SerialStatus@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_SerialWr Lib "BTI1553.DLL" Alias "_BTI1553_SerialWr@12" (ByRef buf As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_TestProtocol Lib "BTI1553.DLL" Alias "_BTI1553_TestProtocol@4" (ByVal handleval As Long) As Long
Public Declare Function BTI1553_ValPackRTCWD Lib "BTI1553.DLL" Alias "_BTI1553_ValPackRTCWD@20" (ByVal mcflag As Long, ByVal taval As Long, ByVal trflag As Long, ByVal saval As Long, ByVal count As Long) As Integer
Public Declare Sub BTI1553_ValUnpackRTCWD Lib "BTI1553.DLL" Alias "_BTI1553_ValUnpackRTCWD@28" (ByVal cwd As Integer, ByRef bcastflag As Long, ByRef mcflag As Long, ByRef taval As Long, ByRef trflag As Long, ByRef saval As Long, ByRef count As Long)

'/**
'*
'*  Channel number constants
'*
'**/

Public Const CH0 As Integer = &H0    '//Channel 0
Public Const CH1 As Integer = &H1    '//Channel 1
Public Const CH2 As Integer = &H2    '//Channel 2
Public Const CH3 As Integer = &H3    '//Channel 3
Public Const CH4 As Integer = &H4    '//Channel 4
Public Const CH5 As Integer = &H5    '//Channel 5
Public Const CH6 As Integer = &H6    '//Channel 6
Public Const CH7 As Integer = &H7    '//Channel 7

'/**
'*
'*  Bus controller configuration options
'*
'**/
